--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
 
     <!-- Meu Javascrit -->
+    <script src="./assets/js/poke-api.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
